--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
-<h2>Welcome!</h2>
+<h2>Welcome to the finance tracker app</h2
+
+<a><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></a>
