--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,12 +7,12 @@ background-color: #FDF6EA !important;
 }
 
 
-
-.navbar-brand {
-
-font-size: 3rem;
-
-}
+//
+// .navbar-brand {
+//
+// font-size: 3rem;
+//
+// }
 
 
 
