Stockslisting view and clean up layout

--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,9 +1,9 @@
-<div class="results-block">
+<div class="results-block mb-1">
   <%= render 'layouts/messages' %>
 </div>
 
 <% if @stock %>
-  <div class="card card-header results-block">
+  <div class="card card-header results-block mb-1">
     <strong>Symbol:</strong><%= @stock.ticker %>
     <strong>Name:</strong><%= @stock.name %>
     <strong>Price:</strong><%= @stock.last_price %>
