--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -15,7 +15,8 @@
             <th scope="row"><%= friend.first_name %></th>
             <td><%= friend.last_name %></td>
             <td><%= friend.email %></td>
-            <td><%= link_to "Stop Following", my_friends_path(current_user),
+            <td><%= link_to "Stop Following", "#", method: :delete,
+                                      data: {confirm: "Are you sure?"},
                                       class: "btn btn-sm btn-warning" %></td>
           </tr>
         <% end %>
