--- a/app/views/users/_friend_result.html.erb
+++ b/app/views/users/_friend_result.html.erb
@@ -12,10 +12,17 @@
             <td><strong>email:</strong><%= friend.email%></td>
             <td><strong>Actions:</strong><%= link_to 'View Profile', "#",
                                           class: "btn btn-sm btn-success" %>
-                <%= link_to 'Add to friends', "#",
-                                          class: "btn btn-success", method: :post %></td>
+                <% if current_user.not_friends_with?(friend.id) %>
+                  <%= link_to 'Add to friends', "#",
+                                          class: "btn btn-sm btn-success", method: :post %>
+                <% else %>
+                  <span class="badge badge-secondary">
+                    You are friends
+                  </span>
+                <% end %>
+            </td>
           </tr>
-          <% end %>
+        <% end %>
       </tbody>
     </table>
   </div>
